(misc): Code cleanup, removing console.logs and fixing row alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
     width: 100vw;
-    /* height: 100vh; */
+    height: fit-content;
     margin: auto;
     background-color: #f0f2f7;
 }
