--- a/src/Components/UserList/UserList.css
+++ b/src/Components/UserList/UserList.css
@@ -3,6 +3,6 @@
     display: flex;
     flex-direction: column;
     background-color: #f0f2f7;
-    height: 100%;
+    min-height: 100vh;
     align-items: center;
 }
